# thelivery

./: .gitignore  CLAUDE.md  DESIGN_SYSTEM.md  README.md  THEME_PANEL_SPEC.md
.github/workflows/: deploy.yml
backend/: .gitignore  Cargo.toml
backend/migrations/: 0001_init.sql  0002_rename_liveries_to_cards.sql  0003_card_history.sql  0003_users.sql  0005_suggestions.sql  0006_tuning_presets.sql  0007_theme.sql  0008_cars.sql  0009_suggestion_status.sql  0010_images.sql  0011_car_code_and_identity.sql  0012_trash_log.sql  0013_soft_delete_cards.sql  0014_suggestion_rate_log.sql  0015_image_role_included.sql  0016_preset_kind.sql  0017_preset_baseline.sql  0018_og_presets.sql  0019_login_rate_log.sql  0020_user_roles_audit_log.sql  0021_must_change_password.sql
backend/seed/: cards.json  cars.json  liveries.json
backend/src/: audit.rs  auth.rs  cards.rs  compositor.rs  identity.rs  images.rs  main.rs  presets.rs  share.rs  state.rs  suggestions.rs  testutil.rs  theme.rs  trash.rs
deploy/: remote-deploy.sh  rollback.sh  setup-caddy.sh  thelivery.service
docs/: FH5 & FH6 Upgrades Hierarchy.md  aar-2026-06-28.md  aar-2026-06-29.md  aar-2026-06-30.md  aar-2026-07-04.md  aar-2026-07-05.md  aar-2026-07-13.md  aar-2026-07-16.md  aar-2026-07-16b.md  aar-2026-07-17.md  aar-2026-07-17b.md  aar-2026-07-17c.md  aar-2026-07-17d.md  architecture.md  audit-2026-07-12.md  audit-2026-07-16.md  cc_code_evaluation_audits.md  claude_md_restructure_plan.md  compositor-for-geoff.md  design-car-identity.md  handoff-2026-07-04.md  handoff-users-db.md  plan-baseline-presets.md  plan-car-identity.md  plan-card-migration-tool.md  plan-cartabs-tunetabs.md  plan-og-overlay-single-renderer.md  plan-og-overlay.md  plan-recipesection-emit-refactor.md  plan-reddit-share.md  plan-submit-tune.md  plan-upgrades-tuning-link.md  plan.md  shakedown-2026-07-17.md  shakedown.md  touchups.md
docs/completed/: TUNING_FACSIMILE_SPEC_1.md  aar-2026-07-03.md  (+12 more)
frontend/: index.html  package-lock.json  package.json  shot.mjs  vite.config.ts
(+89 files in other folders)
